--- a/ui/package.json
+++ b/ui/package.json
@@ -26,6 +26,7 @@
     "@xterm/xterm": "^5.5.0",
     "bits-ui": "^0.21.2",
     "clsx": "^2.1.0",
+    "lucide-svelte": "^0.373.0",
     "mode-watcher": "^0.3.0",
     "paneforge": "^0.0.3",
     "socket.io-client": "^4.7.5",
